# Sales-Analysis-tool

./: .gitignore  README.md  config.py  index.html  pipeline.py  pyproject.toml  regression_categorical_top10.py  requirements.txt  service.py
app/: api.py  config.py  models.py  storage.py  upload_service.py
app/chat/: __init__.py  prompts.py  service.py
app/ingestion/: llm_planner.py  pipeline.py
app/ui/: index.html  main.js
